@@ -5,9 +5,9 @@ apply plugin: 'com.google.devtools.ksp'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
+    compileSdk 34
     defaultConfig {
         applicationId "com.picpay.desafio.android"
-        compileSdk 34
         minSdkVersion 21
         targetSdkVersion 34
         versionCode 1
@@ -23,15 +23,16 @@ android {
     }
 
     buildTypes {
-        debug {
-            minifyEnabled false
-            shrinkResources false
-        }
-
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs += ['-XX:+EnableDynamicAgentLoading']
         }
     }
 
